--- a/UserLogin/package.json
+++ b/UserLogin/package.json
@@ -12,6 +12,7 @@
     "express": "^4.21.2",
     "bcrypt": "^5.1.0",
     "mysql2": "^3.6.0",
-    "dotenv": "^16.4.0"
+    "dotenv": "^16.4.0",
+    "jsonwebtoken": "^8.5.1"
   }
 }
