--- a/UserLogin/package.json
+++ b/UserLogin/package.json
@@ -13,6 +13,7 @@
     "bcrypt": "^5.1.0",
     "mysql2": "^3.6.0",
     "dotenv": "^16.4.0",
-    "jsonwebtoken": "^8.5.1"
+    "jsonwebtoken": "^8.5.1",
+    "cors": "^2.8.5" 
   }
 }
