--- a/UserLogin/package.json
+++ b/UserLogin/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.2",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "mysql2": "^3.6.0",
     "dotenv": "^16.4.0",
     "jsonwebtoken": "^8.5.1",
